// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<UserList /> Should render and match the snapshot - admin 1`] = `
.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: scroll;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  color: unset;
}

.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  padding-right: 10%;
  padding-left: 10%;
  margin-top: 64px;
  color: unset;
}

.c2 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 30px;
  color: unset;
}

.c5 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(35,183,160,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
  cursor: pointer;
}

.c7 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(255,118,145,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
  cursor: pointer;
}

.c8 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(0,0,128,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
  cursor: pointer;
}

.c9 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(128,128,0,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
  cursor: pointer;
}

.c10 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(16,121,105,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
  cursor: pointer;
}

.c11 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(240,104,74,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
  cursor: pointer;
}

.c12 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(0,134,248,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
  cursor: pointer;
}

.c13 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(251,155,10,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
  cursor: pointer;
}

.c14 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 25px;
  color: unset;
}

.c34 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 8px;
  color: unset;
}

.c35 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(35,183,160,1);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
}

.c39 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(255,118,145,1);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
}

.c40 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(194,178,0,1);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
}

.c42 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  min-width: 25px;
  min-height: 25px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 10px;
  padding-left: 10px;
  margin-right: 10px;
  margin-left: 10px;
  background-color: rgba(183,39,234,1);
  cursor: pointer;
  border-radius: 5px;
  border-radius: 5px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
}

.c15 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c36 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  justify-items: flex-start;
  padding-right: 20px;
  width: 100%;
}

.c41 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  margin-bottom: 20px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c17 {
  display: none;
}

.c21 {
  margin-right: 5px;
  border-radius: 5px;
}

.c16:disabled + label > .c20 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c19 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c19:hover {
  cursor: pointer;
}

.c16:disabled + .c18 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c6 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-size: 14px;
  font-weight: 700;
  color: rgba(255,255,255,1);
  color: rgba(255,255,255,1);
}

.c33 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: rgba(210,55,29,1);
  color: rgba(210,55,29,1);
}

.c38 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-weight: 700;
  color: rgba(210,55,29,1);
  color: rgba(210,55,29,1);
}

.c43 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: rgba(255,255,255,1);
  color: rgba(255,255,255,1);
}

.c30 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-left: 20px;
}

.c3 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  margin-right: 10px;
  color: #2F3850;
}

.c44 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  color: #2F3850;
  cursor: pointer;
}

.c23 {
  padding: 12px;
  border-style: solid;
  border-width: 1px;
  border-color: #E9F1FB;
  border-radius: 5px;
  padding-right: 30px;
  padding-left: 30px;
  color: #2F3850;
}

.c23:focus {
  box-shadow: none;
  outline: none;
  border-color: #107969;
}

.c23:disabled {
  color: #ABBBD1;
}

.c22 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c24 {
  position: absolute;
  left: 10px;
  top: 10px;
}

.c4 {
  outline: none;
  border: none;
  background: transparent;
  font-weight: bold;
  font-size: 13px;
  line-height: 17px;
  padding: 2px;
  cursor: pointer;
  font-weight: 700;
  color: rgba(183,39,234,1);
}

.c37 {
  outline: none;
  border: none;
  background: transparent;
  font-weight: bold;
  font-size: 13px;
  line-height: 17px;
  padding: 2px;
  cursor: pointer;
  color: #2F3850;
  text-align: start;
}

.c26 {
  font-size: 13px;
  width: 100%;
  margin-bottom: 20px;
  box-shadow: 0px 4px 20px #E3EEFB;
}

.c26 tr,
.c26 th,
.c26 td {
  font-weight: 400;
}

.c27 {
  height: 47.5px;
}

.c28 {
  cursor: default;
  color: #0E0E0E;
}

.c28:nth-child(even) {
  background: rgba(16,121,105,0.1);
}

.c28:nth-child(even) td:first-child,
.c28:nth-child(even) th:first-child {
  border-bottom-left-radius: 5px;
  border-top-left-radius: 5px;
}

.c28:nth-child(even) td:last-child,
.c28:nth-child(even) th:last-child {
  border-bottom-right-radius: 5px;
  border-top-right-radius: 5px;
}

.c28:hover {
  background: !important;
}

.c31 {
  cursor: pointer;
  color: #0E0E0E;
}

.c31:nth-child(even) {
  background: #FFFFFF;
}

.c31:nth-child(even) td:first-child,
.c31:nth-child(even) th:first-child {
  border-bottom-left-radius: 5px;
  border-top-left-radius: 5px;
}

.c31:nth-child(even) td:last-child,
.c31:nth-child(even) th:last-child {
  border-bottom-right-radius: 5px;
  border-top-right-radius: 5px;
}

.c31:hover {
  background: #E9F1FB !important;
}

.c32 {
  padding-left: 20px;
}

.c29 {
  width: auto;
  background-color: rgba(255,255,255,1);
  color: rgba(47,56,80,1);
  opacity: 0.6;
}

.c25 {
  position: relative;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

<div>
  <div
    class="c0"
    display="flex"
    height="100%"
    overflow="scroll"
  >
    <div
      class="c1"
      width="100%"
    >
      <div
        class="c2"
        display="flex"
      >
        <h1
          class="c3"
        >
          Manage accounts
        </h1>
        <button
          class="c4"
          color="#B727EA"
          font-weight="bold"
        >
          + Invite researcher
        </button>
      </div>
      <div>
        <div
          style="box-sizing: border-box; position: relative; margin-left: auto; margin-right: auto; margin-bottom: 40px; padding: 0px;"
        >
          <div
            style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: space-between;"
          >
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 100%; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%;"
            >
              <div
                style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
              >
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c5"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c6"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Participant
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c7"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c6"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Researcher
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c8"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c6"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Team Admin
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c9"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c6"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Third Party
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c10"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c6"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      E-Intervention Admin
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c11"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c6"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Navigator
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c7"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c6"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Clinic Admin
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c12"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c6"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Organization Admin
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c13"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c6"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Health System Admin
                    </p>
                  </div>
                </div>
                <div
                  class="c14"
                  width="25"
                />
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 33.333333333333336%; flex-basis: 33.333333333333336%; flex-grow: 0; flex-shrink: 0; max-width: 33.333333333333336%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c15"
                  >
                    <input
                      class="c16 c17"
                      id="show-inactive"
                      type="checkbox"
                    />
                    <label
                      class="c18 c19"
                      for="show-inactive"
                    >
                      <img
                        class="c20 c21"
                        src="IMAGE_MOCK"
                      />
                      Show inactive accounts
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 100%; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-top: 10px;"
            >
              <div
                class="c22"
              >
                <input
                  aria-label="Filter users by name"
                  class="c23"
                  placeholder="Filter users by name"
                  type="text"
                />
                <img
                  alt="search"
                  class="c24"
                  src="IMAGE_MOCK"
                />
                
              </div>
            </div>
          </div>
          <span
            style="display: table; clear: both;"
          />
        </div>
        <div
          data-private="true"
        >
          <div
            class="c25"
          >
            <table
              class="c26"
              width="100%"
            >
              <thead
                class=""
              >
                <tr
                  class="c27 c28"
                >
                  <th
                    class="c29"
                    color="#2F3850"
                    opacity="0.6"
                    scope="col"
                    width="auto"
                  >
                    <div
                      class="c30"
                    >
                      Name
                    </div>
                  </th>
                  <th
                    class="c29"
                    color="#2F3850"
                    opacity="0.6"
                    scope="col"
                    width="auto"
                  >
                    <div
                      class="c30"
                    >
                      Email
                    </div>
                  </th>
                  <th
                    class="c29"
                    color="#2F3850"
                    opacity="0.6"
                    scope="col"
                    width="auto"
                  >
                    <div
                      class="c30"
                    >
                      Role
                    </div>
                  </th>
                  <th
                    class="c29"
                    color="#2F3850"
                    opacity="0.6"
                    scope="col"
                    width="auto"
                  >
                    <div
                      class="c30"
                    >
                      Activate/Deactivate
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class=""
              >
                <tr
                  class="c27 c31"
                  color="#FFFFFF"
                  cursor="pointer"
                >
                  <td
                    class="c32"
                  >
                    <p
                      class="c33"
                      color="#D2371D"
                    >
                      Waiting for activation
                    </p>
                  </td>
                  <td
                    class="c32"
                  >
                    test@test.pl
                  </td>
                  <td
                    class="c32"
                  >
                    <div
                      class="c34"
                      display="flex"
                    >
                      <div
                        class="c35"
                        display="inline-flex"
                        width="max-content"
                      >
                        <p
                          class="c6"
                          color="#FFFFFF"
                          font-size="14"
                          font-weight="bold"
                        >
                          Participant
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="c32"
                  >
                    <div
                      class="c36"
                      width="100%"
                    >
                      <button
                        class="c37"
                      >
                        <p
                          class="c38"
                          color="#D2371D"
                          font-weight="bold"
                        >
                          Deactivate account
                        </p>
                      </button>
                    </div>
                  </td>
                </tr>
                <tr
                  class="c27 c31"
                  color="#FFFFFF"
                  cursor="pointer"
                >
                  <td
                    class="c32"
                  >
                    <p
                      class="c33"
                      color="#D2371D"
                    >
                      Waiting for activation
                    </p>
                  </td>
                  <td
                    class="c32"
                  >
                    test2@test.pl
                  </td>
                  <td
                    class="c32"
                  >
                    <div
                      class="c34"
                      display="flex"
                    >
                      <div
                        class="c39"
                        display="inline-flex"
                        width="max-content"
                      >
                        <p
                          class="c6"
                          color="#FFFFFF"
                          font-size="14"
                          font-weight="bold"
                        >
                          Researcher
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="c32"
                  >
                    <div
                      class="c36"
                      width="100%"
                    >
                      <button
                        class="c37"
                      >
                        <p
                          class="c38"
                          color="#D2371D"
                          font-weight="bold"
                        >
                          Deactivate account
                        </p>
                      </button>
                    </div>
                  </td>
                </tr>
                <tr
                  class="c27 c31"
                  color="#FFFFFF"
                  cursor="pointer"
                >
                  <td
                    class="c32"
                  >
                    <p
                      class="c33"
                      color="#D2371D"
                    >
                      Waiting for activation
                    </p>
                  </td>
                  <td
                    class="c32"
                  >
                    test3@test.pl
                  </td>
                  <td
                    class="c32"
                  >
                    <div
                      class="c34"
                      display="flex"
                    >
                      <div
                        class="c40"
                        display="inline-flex"
                        width="max-content"
                      >
                        <p
                          class="c6"
                          color="#FFFFFF"
                          font-size="14"
                          font-weight="bold"
                        >
                          Admin
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="c32"
                  >
                    <div
                      class="c36"
                      width="100%"
                    >
                      <button
                        class="c37"
                      >
                        <p
                          class="c38"
                          color="#D2371D"
                          font-weight="bold"
                        >
                          Deactivate account
                        </p>
                      </button>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          aria-label="Data list pagination"
          class="c41"
          display="flex"
          role="navigation"
          width="100%"
        >
          <div
            aria-label="Go to page: 1"
            aria-selected="true"
            class="c42"
            cursor="pointer"
            display="flex"
          >
            <p
              class="c43"
              color="#FFFFFF"
            >
              1
            </p>
          </div>
          <h1
            aria-label="Go to next page"
            class="c44"
            cursor="pointer"
          >
            &gt;
          </h1>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`<UserList /> Should render and match the snapshot - researcher 1`] = `
.c0 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  height: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  overflow: scroll;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  color: unset;
}

.c1 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 100%;
  padding-right: 10%;
  padding-left: 10%;
  margin-top: 64px;
  color: unset;
}

.c2 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  margin-bottom: 30px;
  color: unset;
}

.c4 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(35,183,160,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
  cursor: pointer;
}

.c6 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(255,118,145,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
  cursor: pointer;
}

.c7 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(0,0,128,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
  cursor: pointer;
}

.c8 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(128,128,0,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
  cursor: pointer;
}

.c9 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(16,121,105,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
  cursor: pointer;
}

.c10 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(240,104,74,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
  cursor: pointer;
}

.c11 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(0,134,248,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
  cursor: pointer;
}

.c12 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(251,155,10,1);
  cursor: pointer;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
  cursor: pointer;
}

.c13 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: 25px;
  color: unset;
}

.c33 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-top: 8px;
  padding-bottom: 8px;
  -webkit-flex-wrap: wrap;
  -ms-flex-wrap: wrap;
  flex-wrap: wrap;
  gap: 8px;
  color: unset;
}

.c34 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(35,183,160,1);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
}

.c38 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(255,118,145,1);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
}

.c39 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
  display: -webkit-inline-box;
  display: -webkit-inline-flex;
  display: -ms-inline-flexbox;
  display: inline-flex;
  padding-top: 5px;
  padding-bottom: 5px;
  padding-right: 10px;
  padding-left: 10px;
  background-color: rgba(194,178,0,1);
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
}

.c41 {
  width: auto;
  height: auto;
  display: block;
  border-radius: 5px;
  min-width: 25px;
  min-height: 25px;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  padding-right: 10px;
  padding-left: 10px;
  margin-right: 10px;
  margin-left: 10px;
  background-color: rgba(183,39,234,1);
  cursor: pointer;
  border-radius: 5px;
  border-radius: 5px;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  color: unset;
}

.c14 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: justify;
  -webkit-justify-content: space-between;
  -ms-flex-pack: justify;
  justify-content: space-between;
  justify-items: space-between;
  -webkit-align-content: center;
  -ms-flex-line-pack: center;
  align-content: center;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
}

.c35 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: start;
  -webkit-justify-content: flex-start;
  -ms-flex-pack: start;
  justify-content: flex-start;
  justify-items: flex-start;
  padding-right: 20px;
  width: 100%;
}

.c40 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: row;
  -ms-flex-direction: row;
  flex-direction: row;
  height: auto;
  -webkit-box-pack: center;
  -webkit-justify-content: center;
  -ms-flex-pack: center;
  justify-content: center;
  justify-items: center;
  margin-bottom: 20px;
  width: 100%;
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
}

.c16 {
  display: none;
}

.c20 {
  margin-right: 5px;
  border-radius: 5px;
}

.c15:disabled + label > .c19 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c18 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  width: -webkit-max-content;
  width: -moz-max-content;
  width: max-content;
}

.c18:hover {
  cursor: pointer;
}

.c15:disabled + .c17 {
  opacity: 0.5;
  cursor: not-allowed;
}

.c5 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-size: 14px;
  font-weight: 700;
  color: rgba(255,255,255,1);
  color: rgba(255,255,255,1);
}

.c32 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: rgba(210,55,29,1);
  color: rgba(210,55,29,1);
}

.c37 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  font-weight: 700;
  color: rgba(210,55,29,1);
  color: rgba(210,55,29,1);
}

.c42 {
  font-family: DM Sans;
  font-size: 13px;
  line-height: 130%;
  color: rgba(255,255,255,1);
  color: rgba(255,255,255,1);
}

.c29 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-flex-direction: column;
  -ms-flex-direction: column;
  flex-direction: column;
  width: 100%;
  -webkit-align-content: flex-start;
  -ms-flex-line-pack: start;
  align-content: flex-start;
  -webkit-align-items: flex-start;
  -webkit-box-align: flex-start;
  -ms-flex-align: flex-start;
  align-items: flex-start;
  padding-left: 20px;
}

.c3 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  margin-right: 10px;
  color: #2F3850;
}

.c43 {
  margin: 0;
  font-family: DM Sans;
  font-size: 25px;
  line-height: 130%;
  color: #2F3850;
  cursor: pointer;
}

.c22 {
  padding: 12px;
  border-style: solid;
  border-width: 1px;
  border-color: #E9F1FB;
  border-radius: 5px;
  padding-right: 30px;
  padding-left: 30px;
  color: #2F3850;
}

.c22:focus {
  box-shadow: none;
  outline: none;
  border-color: #107969;
}

.c22:disabled {
  color: #ABBBD1;
}

.c21 {
  display: -webkit-box;
  display: -webkit-flex;
  display: -ms-flexbox;
  display: flex;
  -webkit-align-items: center;
  -webkit-box-align: center;
  -ms-flex-align: center;
  align-items: center;
  position: relative;
}

.c23 {
  position: absolute;
  left: 10px;
  top: 10px;
}

.c36 {
  outline: none;
  border: none;
  background: transparent;
  font-weight: bold;
  font-size: 13px;
  line-height: 17px;
  padding: 2px;
  cursor: pointer;
  color: #2F3850;
  text-align: start;
}

.c25 {
  font-size: 13px;
  width: 100%;
  margin-bottom: 20px;
  box-shadow: 0px 4px 20px #E3EEFB;
}

.c25 tr,
.c25 th,
.c25 td {
  font-weight: 400;
}

.c26 {
  height: 47.5px;
}

.c27 {
  cursor: default;
  color: #0E0E0E;
}

.c27:nth-child(even) {
  background: rgba(16,121,105,0.1);
}

.c27:nth-child(even) td:first-child,
.c27:nth-child(even) th:first-child {
  border-bottom-left-radius: 5px;
  border-top-left-radius: 5px;
}

.c27:nth-child(even) td:last-child,
.c27:nth-child(even) th:last-child {
  border-bottom-right-radius: 5px;
  border-top-right-radius: 5px;
}

.c27:hover {
  background: !important;
}

.c30 {
  cursor: pointer;
  color: #0E0E0E;
}

.c30:nth-child(even) {
  background: #FFFFFF;
}

.c30:nth-child(even) td:first-child,
.c30:nth-child(even) th:first-child {
  border-bottom-left-radius: 5px;
  border-top-left-radius: 5px;
}

.c30:nth-child(even) td:last-child,
.c30:nth-child(even) th:last-child {
  border-bottom-right-radius: 5px;
  border-top-right-radius: 5px;
}

.c30:hover {
  background: #E9F1FB !important;
}

.c31 {
  padding-left: 20px;
}

.c28 {
  width: auto;
  background-color: rgba(255,255,255,1);
  color: rgba(47,56,80,1);
  opacity: 0.6;
}

.c24 {
  position: relative;
}

@media only screen and (min-width:768px) {

}

@media only screen and (min-width:960px) {

}

@media only screen and (min-width:1170px) {

}

@media only screen and (min-width:1360px) {

}

<div>
  <div
    class="c0"
    display="flex"
    height="100%"
    overflow="scroll"
  >
    <div
      class="c1"
      width="100%"
    >
      <div
        class="c2"
        display="flex"
      >
        <h1
          class="c3"
        >
          Manage accounts
        </h1>
      </div>
      <div>
        <div
          style="box-sizing: border-box; position: relative; margin-left: auto; margin-right: auto; margin-bottom: 40px; padding: 0px;"
        >
          <div
            style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: space-between;"
          >
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 100%; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%;"
            >
              <div
                style="margin-left: -15px; margin-right: -15px; display: flex; flex-wrap: wrap; flex-grow: 0; flex-shrink: 0; align-items: center; justify-content: flex-start;"
              >
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c4"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c5"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Participant
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c6"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c5"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Researcher
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c7"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c5"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Team Admin
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c8"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c5"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Third Party
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c9"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c5"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      E-Intervention Admin
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c10"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c5"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Navigator
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c6"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c5"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Clinic Admin
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c11"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c5"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Organization Admin
                    </p>
                  </div>
                </div>
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: auto; flex-basis: auto; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c12"
                    display="inline-flex"
                    width="max-content"
                  >
                    <p
                      class="c5"
                      color="#FFFFFF"
                      font-size="14"
                      font-weight="bold"
                    >
                      Health System Admin
                    </p>
                  </div>
                </div>
                <div
                  class="c13"
                  width="25"
                />
                <div
                  style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 33.333333333333336%; flex-basis: 33.333333333333336%; flex-grow: 0; flex-shrink: 0; max-width: 33.333333333333336%; margin-left: 0%; margin-bottom: 10px;"
                >
                  <div
                    class="c14"
                  >
                    <input
                      class="c15 c16"
                      id="show-inactive"
                      type="checkbox"
                    />
                    <label
                      class="c17 c18"
                      for="show-inactive"
                    >
                      <img
                        class="c19 c20"
                        src="IMAGE_MOCK"
                      />
                      Show inactive accounts
                    </label>
                  </div>
                </div>
              </div>
            </div>
            <div
              style="box-sizing: border-box; min-height: 1px; position: relative; padding-left: 15px; padding-right: 15px; width: 100%; flex-basis: 100%; flex-grow: 0; flex-shrink: 0; max-width: 100%; margin-left: 0%; margin-top: 10px;"
            >
              <div
                class="c21"
              >
                <input
                  aria-label="Filter users by name"
                  class="c22"
                  placeholder="Filter users by name"
                  type="text"
                />
                <img
                  alt="search"
                  class="c23"
                  src="IMAGE_MOCK"
                />
                
              </div>
            </div>
          </div>
          <span
            style="display: table; clear: both;"
          />
        </div>
        <div
          data-private="true"
        >
          <div
            class="c24"
          >
            <table
              class="c25"
              width="100%"
            >
              <thead
                class=""
              >
                <tr
                  class="c26 c27"
                >
                  <th
                    class="c28"
                    color="#2F3850"
                    opacity="0.6"
                    scope="col"
                    width="auto"
                  >
                    <div
                      class="c29"
                    >
                      Name
                    </div>
                  </th>
                  <th
                    class="c28"
                    color="#2F3850"
                    opacity="0.6"
                    scope="col"
                    width="auto"
                  >
                    <div
                      class="c29"
                    >
                      Email
                    </div>
                  </th>
                  <th
                    class="c28"
                    color="#2F3850"
                    opacity="0.6"
                    scope="col"
                    width="auto"
                  >
                    <div
                      class="c29"
                    >
                      Role
                    </div>
                  </th>
                  <th
                    class="c28"
                    color="#2F3850"
                    opacity="0.6"
                    scope="col"
                    width="auto"
                  >
                    <div
                      class="c29"
                    >
                      Activate/Deactivate
                    </div>
                  </th>
                </tr>
              </thead>
              <tbody
                class=""
              >
                <tr
                  class="c26 c30"
                  color="#FFFFFF"
                  cursor="pointer"
                >
                  <td
                    class="c31"
                  >
                    <p
                      class="c32"
                      color="#D2371D"
                    >
                      Waiting for activation
                    </p>
                  </td>
                  <td
                    class="c31"
                  >
                    test@test.pl
                  </td>
                  <td
                    class="c31"
                  >
                    <div
                      class="c33"
                      display="flex"
                    >
                      <div
                        class="c34"
                        display="inline-flex"
                        width="max-content"
                      >
                        <p
                          class="c5"
                          color="#FFFFFF"
                          font-size="14"
                          font-weight="bold"
                        >
                          Participant
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="c31"
                  >
                    <div
                      class="c35"
                      width="100%"
                    >
                      <button
                        class="c36"
                      >
                        <p
                          class="c37"
                          color="#D2371D"
                          font-weight="bold"
                        >
                          Deactivate account
                        </p>
                      </button>
                    </div>
                  </td>
                </tr>
                <tr
                  class="c26 c30"
                  color="#FFFFFF"
                  cursor="pointer"
                >
                  <td
                    class="c31"
                  >
                    <p
                      class="c32"
                      color="#D2371D"
                    >
                      Waiting for activation
                    </p>
                  </td>
                  <td
                    class="c31"
                  >
                    test2@test.pl
                  </td>
                  <td
                    class="c31"
                  >
                    <div
                      class="c33"
                      display="flex"
                    >
                      <div
                        class="c38"
                        display="inline-flex"
                        width="max-content"
                      >
                        <p
                          class="c5"
                          color="#FFFFFF"
                          font-size="14"
                          font-weight="bold"
                        >
                          Researcher
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="c31"
                  >
                    <div
                      class="c35"
                      width="100%"
                    >
                      <button
                        class="c36"
                      >
                        <p
                          class="c37"
                          color="#D2371D"
                          font-weight="bold"
                        >
                          Deactivate account
                        </p>
                      </button>
                    </div>
                  </td>
                </tr>
                <tr
                  class="c26 c30"
                  color="#FFFFFF"
                  cursor="pointer"
                >
                  <td
                    class="c31"
                  >
                    <p
                      class="c32"
                      color="#D2371D"
                    >
                      Waiting for activation
                    </p>
                  </td>
                  <td
                    class="c31"
                  >
                    test3@test.pl
                  </td>
                  <td
                    class="c31"
                  >
                    <div
                      class="c33"
                      display="flex"
                    >
                      <div
                        class="c39"
                        display="inline-flex"
                        width="max-content"
                      >
                        <p
                          class="c5"
                          color="#FFFFFF"
                          font-size="14"
                          font-weight="bold"
                        >
                          Admin
                        </p>
                      </div>
                    </div>
                  </td>
                  <td
                    class="c31"
                  >
                    <div
                      class="c35"
                      width="100%"
                    >
                      <button
                        class="c36"
                      >
                        <p
                          class="c37"
                          color="#D2371D"
                          font-weight="bold"
                        >
                          Deactivate account
                        </p>
                      </button>
                    </div>
                  </td>
                </tr>
              </tbody>
            </table>
          </div>
        </div>
        <div
          aria-label="Data list pagination"
          class="c40"
          display="flex"
          role="navigation"
          width="100%"
        >
          <div
            aria-label="Go to page: 1"
            aria-selected="true"
            class="c41"
            cursor="pointer"
            display="flex"
          >
            <p
              class="c42"
              color="#FFFFFF"
            >
              1
            </p>
          </div>
          <h1
            aria-label="Go to next page"
            class="c43"
            cursor="pointer"
          >
            &gt;
          </h1>
        </div>
      </div>
    </div>
  </div>
</div>
`;
